--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "description": "",
     "main": "electron/main.mjs",
     "scripts": {
-        "run": "npx electron ."
+        "run": "npx electron .",
+        "package": "node ./build.mjs ; npx electron-builder build"
     },
     "author": "",
     "license": "ISC",
@@ -28,6 +29,21 @@
         "@types/ramda": "^0.29.7",
         "@types/react": "^18.2.24",
         "@types/react-dom": "^18.2.8",
-        "@types/uuid": "^9.0.6"
+        "@types/uuid": "^9.0.6",
+        "electron-builder": "^24.6.4"
+    },
+    "build": {
+        "productName": "GlOWLbus",
+        "appId": "whatever.GlOWLbus",
+        "win": {
+            "target": ["portable"]
+        },
+        "portable": {
+            "artifactName": "GlOWLbus.exe"
+        },
+        "directories": {
+            "output": "electron-windows-portable",
+            "app": "."
+        }
     }
 }
